fix hero on smaller screens

--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -135,6 +135,7 @@
 .hero .slick-slide img.hero
 {
     min-height: 500px;
+    width: auto;
 }
 .slick-slide.slick-loading img
 {
